--- a/notebooks/view_sample_predictions.ipynb
+++ b/notebooks/view_sample_predictions.ipynb
@@ -31,7 +31,7 @@
                 "import sys\n",
                 "import warnings\n",
                 "\n",
-                "from transformers.models.mt5 import MT5TokenizerFast\n",
+                "from transformers.models.mt5 import MT5Tokenizer\n",
                 "import pandas as pd\n",
                 "\n",
                 "sys.path.append('..')  # Allow import of project packages\n",
@@ -56,7 +56,7 @@
                         "Number of rows remaining: 161989\n",
                         "Using 161989 of 161989 examples.\n",
                         "Train: 113392, Val: 24298, Test: 24299\n",
-                        "<text_summarizer.data.motions_data_module.MotionsDataModule object at 0x7fe784f48b50>\n"
+                        "<text_summarizer.data.motions_data_module.MotionsDataModule object at 0x7f0ee4525dc0>\n"
                     ]
                 }
             ],
@@ -77,7 +77,7 @@
                 "warnings.filterwarnings('ignore')\n",
                 "pd.set_option('display.max_colwidth', 500)\n",
                 " \n",
-                "MODEL_PATH = \"../training/logs/lightning_logs/version_1/checkpoints/epoch=019-val_loss=0.000-val_cer=0.000.ckpt\"\n",
+                "MODEL_PATH = \"../training/logs/lightning_logs/version_17/checkpoints/epoch=009-val_loss=0.000-val_cer=0.000.ckpt\"\n",
                 "RANDOM_STATE = 1"
             ]
         },
@@ -91,7 +91,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 4,
             "id": "c1dfec9b",
             "metadata": {},
             "outputs": [],
@@ -103,11 +103,11 @@
                 "\n",
                 "lit_model = MT5LitModel.load_from_checkpoint(\n",
                 "    checkpoint_path=MODEL_PATH,\n",
-                "    model=model,\n",
-                "    args=argparse.Namespace())\n",
+                "    model=model\n",
+                ")\n",
                 "lit_model.freeze()\n",
                 "\n",
-                "tokenizer = MT5TokenizerFast.from_pretrained(model.model_name)"
+                "tokenizer = MT5Tokenizer.from_pretrained(model.model_name)"
             ]
         },
         {
@@ -120,7 +120,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 9,
+            "execution_count": 6,
             "id": "8b09fd5e",
             "metadata": {},
             "outputs": [],
@@ -158,10 +158,27 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 12,
+            "execution_count": 23,
             "id": "dc1df9ab",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Motion text:\n",
+                        "--------------------------------------------------\n",
+                        "I årets budgetproposition (bil. 10) föreslås att en processindustrilinje om 60 poäng förläggs till högskolan i Sundsvall/Härnösand. Universitets- och högskoleämbetet har också i sin informationsbroschyr om utbildningslinjer inom den yrkestekniska högskolan tagit upp nämnda linje. 1 både budgetpropositionen och informationsbroschyren framställs linjen så att den också skall vara inriktad mot pappers- och massaindustrin. En sådan utbildning finns emellertid redan vid Lunds universitet förlagd till\n",
+                        "--------------------------------------------------\n",
+                        "Actual title:\n",
+                        "Verksamheten vid de yrkestekniska högskolorna i Markaryd och Sundsvall/Härnösand\n",
+                        "--------------------------------------------------\n",
+                        "Predicted title:\n",
+                        "med anledning av prop. 2021/22:168 Ökad tillgång till spelmarknad\n",
+                        "--------------------------------------------------\n"
+                    ]
+                }
+            ],
             "source": [
                 "def show_sample_pred(tokenizer):\n",
                 "    sample_index = random.randint(0, len(dataset.data_test.data))\n",
@@ -183,51 +200,10 @@
                 "    print(50*\"-\")\n",
                 "    print(\"Predicted title:\")\n",
                 "    print(model_summary)\n",
-                "    print(50*\"-\")\n"
+                "    print(50*\"-\")\n",
+                "\n",
+                "show_sample_pred(lit_model.tokenizer)"
             ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 22,
-            "id": "54b88293",
-            "metadata": {},
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "Motion text:\n",
-                        "--------------------------------------------------\n",
-                        "Ämnet barnkunskap behandlar barns fysiska och psykiska utveckling och behov i vid mening. Den tidsmässiga omfattningen är dock endast en veckotimme på högstadiet. Frågor som rör ungdomars egna livsvillkor toppar alltid listan på de områden de vill diskutera och få belysta i skolan. Det kan gälla frågor om kontakter med det motsatta könet, ensamhet, rädsla, förtryck, hur man vill vara som förälder, man - barn, kvinna barn m. m. Att få behandla dessa frågor på ett ingående och seriöst sätt med pro\n",
-                        "--------------------------------------------------\n",
-                        "Actual title:\n",
-                        "om utveckling av ämnet barnkunskap i grundskolan\n",
-                        "--------------------------------------------------\n",
-                        "Predicted title:\n",
-                        "med anledning av prop. 1993/94:177 Utbildning för nyanländas elever\n",
-                        "--------------------------------------------------\n"
-                    ]
-                }
-            ],
-            "source": [
-                "show_sample_pred(lit_model.tokenizer)\n"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "id": "8eb91cb7",
-            "metadata": {},
-            "outputs": [],
-            "source": []
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "id": "541e0eac",
-            "metadata": {},
-            "outputs": [],
-            "source": []
         }
     ],
     "metadata": {
