--- a/notebooks/view_sample_predictions.ipynb
+++ b/notebooks/view_sample_predictions.ipynb
@@ -12,24 +12,16 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": 7,
             "id": "c77d35f0-47b5-4f9c-bcb0-002049e5fdfe",
             "metadata": {},
-            "outputs": [
-                {
-                    "name": "stderr",
-                    "output_type": "stream",
-                    "text": [
-                        "/home/erik/miniconda3/envs/swe-parl-mot-summarization/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-                        "  from .autonotebook import tqdm as notebook_tqdm\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "source": [
                 "import argparse\n",
                 "import random\n",
                 "import sys\n",
                 "import warnings\n",
+                "import yaml\n",
                 "\n",
                 "from transformers.models.mt5 import MT5Tokenizer\n",
                 "import pandas as pd\n",
@@ -38,12 +30,21 @@
                 "from text_summarizer.data.motions_data_module import MotionsDataModule\n",
                 "from text_summarizer.models import t5\n",
                 "from text_summarizer.lit_models import MT5LitModel\n",
-                "from text_summarizer.util import summarize"
+                "from text_summarizer.util import summarize\n",
+                "\n",
+                "warnings.filterwarnings('ignore')\n",
+                "pd.set_option('display.max_colwidth', 500)\n",
+                "\n",
+                "BASE_PATH = \"../training/logs/lightning_logs/version_17/\"\n",
+                "MODEL_PATH = BASE_PATH + \"checkpoints/epoch=009-val_loss=0.000-val_cer=0.000.ckpt\"\n",
+                "CONFIG_PATH = BASE_PATH + \"config.json\"\n",
+                "HPARAMS_PATH =  BASE_PATH + \"hparams.yaml\"\n",
+                "RANDOM_STATE = 1"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 8,
             "id": "b850804a",
             "metadata": {},
             "outputs": [
@@ -56,29 +57,19 @@
                         "Number of rows remaining: 161989\n",
                         "Using 161989 of 161989 examples.\n",
                         "Train: 113392, Val: 24298, Test: 24299\n",
-                        "<text_summarizer.data.motions_data_module.MotionsDataModule object at 0x7f0ee4525dc0>\n"
+                        "<text_summarizer.data.motions_data_module.MotionsDataModule object at 0x7f9454510850>\n"
                     ]
                 }
             ],
             "source": [
-                "dataset = MotionsDataModule(args=argparse.Namespace())\n",
+                "# Load pytorch-lightning experiment args\n",
+                "with open(HPARAMS_PATH, \"r\") as hparams_file:\n",
+                "   lightning_config = argparse.Namespace(**yaml.load(hparams_file, Loader=yaml.Loader))\n",
+                "\n",
+                "dataset = MotionsDataModule(lightning_config)\n",
                 "dataset.prepare_data()\n",
                 "dataset.setup()\n",
                 "print(dataset)"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 3,
-            "id": "9fcdfd10",
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "warnings.filterwarnings('ignore')\n",
-                "pd.set_option('display.max_colwidth', 500)\n",
-                " \n",
-                "MODEL_PATH = \"../training/logs/lightning_logs/version_17/checkpoints/epoch=009-val_loss=0.000-val_cer=0.000.ckpt\"\n",
-                "RANDOM_STATE = 1"
             ]
         },
         {
@@ -91,21 +82,19 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": 9,
             "id": "c1dfec9b",
             "metadata": {},
             "outputs": [],
             "source": [
-                "model = t5.MT5(\n",
-                "    data_config=dataset.config(),\n",
-                "    args=argparse.Namespace()\n",
-                ")\n",
+                "# Instanciate model to pass to lit_model\n",
+                "model = t5.MT5(data_config={}, args=lightning_config)\n",
                 "\n",
                 "lit_model = MT5LitModel.load_from_checkpoint(\n",
                 "    checkpoint_path=MODEL_PATH,\n",
-                "    model=model\n",
+                "    model=model,\n",
                 ")\n",
-                "lit_model.freeze()\n",
+                "lit_model.eval()\n",
                 "\n",
                 "tokenizer = MT5Tokenizer.from_pretrained(model.model_name)"
             ]
@@ -120,7 +109,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": 10,
             "id": "8b09fd5e",
             "metadata": {},
             "outputs": [],
@@ -158,7 +147,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 23,
+            "execution_count": 11,
             "id": "dc1df9ab",
             "metadata": {},
             "outputs": [
@@ -168,13 +157,13 @@
                     "text": [
                         "Motion text:\n",
                         "--------------------------------------------------\n",
-                        "I årets budgetproposition (bil. 10) föreslås att en processindustrilinje om 60 poäng förläggs till högskolan i Sundsvall/Härnösand. Universitets- och högskoleämbetet har också i sin informationsbroschyr om utbildningslinjer inom den yrkestekniska högskolan tagit upp nämnda linje. 1 både budgetpropositionen och informationsbroschyren framställs linjen så att den också skall vara inriktad mot pappers- och massaindustrin. En sådan utbildning finns emellertid redan vid Lunds universitet förlagd till\n",
+                        "Genom riksdagens beslut (CU 1976/77:18 s. 36-37, 64-65) höjdes övre lånegränserna för bostadslån för nybyggnad när det gällde i huvudsak enskilt ägda hyreshus från 85 till 92 96 av pantvärdet. I reservation (s) hävdades att detta endast gav enskilda fastighetsägare en resultatförbättring men att de bostadspolitiska målen - ytterst de boendes intressen - inte främjades. Vi har fortfarande samma ståndpunkt som den i reservationen anförda och anser att lånegränsen bör sänkas till tidigare nivå 85 %\n",
                         "--------------------------------------------------\n",
                         "Actual title:\n",
-                        "Verksamheten vid de yrkestekniska högskolorna i Markaryd och Sundsvall/Härnösand\n",
+                        "om sänkning av lånegränsen för bostadslån\n",
                         "--------------------------------------------------\n",
                         "Predicted title:\n",
-                        "med anledning av prop. 2021/22:168 Ökad tillgång till spelmarknad\n",
+                        "om höjt anslag till lånefonden för bostadsbyggande\n",
                         "--------------------------------------------------\n"
                     ]
                 }
