--- a/notebooks/view_sample_predictions.ipynb
+++ b/notebooks/view_sample_predictions.ipynb
@@ -35,16 +35,15 @@
                 "warnings.filterwarnings('ignore')\n",
                 "pd.set_option('display.max_colwidth', 500)\n",
                 "\n",
-                "BASE_PATH = \"../training/logs/lightning_logs/version_17/\"\n",
-                "MODEL_PATH = BASE_PATH + \"checkpoints/epoch=009-val_loss=0.000-val_cer=0.000.ckpt\"\n",
-                "CONFIG_PATH = BASE_PATH + \"config.json\"\n",
+                "BASE_PATH = \"../training/logs/lightning_logs/version_1/\"\n",
+                "MODEL_PATH = BASE_PATH + \"checkpoints/epoch=009-val_loss=1.242.ckpt\"\n",
                 "HPARAMS_PATH =  BASE_PATH + \"hparams.yaml\"\n",
                 "RANDOM_STATE = 1"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 8,
+            "execution_count": 5,
             "id": "b850804a",
             "metadata": {},
             "outputs": [
@@ -57,7 +56,7 @@
                         "Number of rows remaining: 161989\n",
                         "Using 161989 of 161989 examples.\n",
                         "Train: 113392, Val: 24298, Test: 24299\n",
-                        "<text_summarizer.data.motions_data_module.MotionsDataModule object at 0x7f9454510850>\n"
+                        "<text_summarizer.data.motions_data_module.MotionsDataModule object at 0x7f76ff150850>\n"
                     ]
                 }
             ],
@@ -82,7 +81,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 9,
+            "execution_count": 6,
             "id": "c1dfec9b",
             "metadata": {},
             "outputs": [],
@@ -109,7 +108,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 10,
+            "execution_count": 59,
             "id": "8b09fd5e",
             "metadata": {},
             "outputs": [],
@@ -147,7 +146,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 11,
+            "execution_count": 60,
             "id": "dc1df9ab",
             "metadata": {},
             "outputs": [
@@ -157,13 +156,13 @@
                     "text": [
                         "Motion text:\n",
                         "--------------------------------------------------\n",
-                        "Genom riksdagens beslut (CU 1976/77:18 s. 36-37, 64-65) höjdes övre lånegränserna för bostadslån för nybyggnad när det gällde i huvudsak enskilt ägda hyreshus från 85 till 92 96 av pantvärdet. I reservation (s) hävdades att detta endast gav enskilda fastighetsägare en resultatförbättring men att de bostadspolitiska målen - ytterst de boendes intressen - inte främjades. Vi har fortfarande samma ståndpunkt som den i reservationen anförda och anser att lånegränsen bör sänkas till tidigare nivå 85 %\n",
+                        "Vi har i vår motion om den allmänna inriktningen av den ekonomiska politiken m. m. bl. a. föreslagit att-som ett led i ett stöd till de särskilt utsatta grupperna - en temporär höjning skall ske av studiebidraget inom studiehjälpssystemet och det förlängda barnbidraget. Den temporära höjningen bör utgå med nio tolftedelar av det föreslagna beloppet för extra tillägg till barnbidraget (500 kr.), dvs. 375 kr. Utbetalningen bör göras så snart som möjligt efter början av höstterminen 1978 och ha for\n",
                         "--------------------------------------------------\n",
                         "Actual title:\n",
-                        "om sänkning av lånegränsen för bostadslån\n",
+                        "med anledning av propositionen 1977/78:150 med förslag till slutlig reglering av statsbudgeten för budgetåret 1978/79, m. m. (kompletteringsproposition)\n",
                         "--------------------------------------------------\n",
                         "Predicted title:\n",
-                        "om höjt anslag till lånefonden för bostadsbyggande\n",
+                        "om vidgad rätt till studiebidrag\n",
                         "--------------------------------------------------\n"
                     ]
                 }
@@ -193,6 +192,22 @@
                 "\n",
                 "show_sample_pred(lit_model.tokenizer)"
             ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "b551e6ce",
+            "metadata": {},
+            "outputs": [],
+            "source": []
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "93b2e4da",
+            "metadata": {},
+            "outputs": [],
+            "source": []
         }
     ],
     "metadata": {
