Move and rename util functions and files.

--- a/notebooks/exploratory-data-analysis.ipynb
+++ b/notebooks/exploratory-data-analysis.ipynb
@@ -24,15 +24,15 @@
     "import seaborn as sns\n",
     "\n",
     "sys.path.append('../..')  # Allow import of project packages\n",
-    "from training_dataset_downloader.src.training_dataset_preprocessor import (\n",
-    "    _trim_motion_text_by_subtitle,\n",
-    "    _trim_leadning_motivation,\n",
-    "    _trim_linebreaks,\n",
-    "    _trim_motion_text_by_proposed_decision,\n",
-    "    _trim_motion_text_by_leading_title,\n",
-    "    _trim_whitespace,\n",
-    "    _set_empty_when_leadning_date,\n",
-    "    _delete_footer\n",
+    "from utils.text import (\n",
+    "    trim_motion_text_by_subtitle,\n",
+    "    trim_leadning_motivation,\n",
+    "    trim_linebreaks,\n",
+    "    trim_motion_text_by_proposed_decision,\n",
+    "    trim_motion_text_by_leading_title,\n",
+    "    trim_whitespace,\n",
+    "    set_empty_when_leading_date,\n",
+    "    delete_footer\n",
     ")\n",
     "\n",
     "warnings.filterwarnings('ignore')\n",
