--- a/notebooks/view_sample_predictions.ipynb
+++ b/notebooks/view_sample_predictions.ipynb
@@ -12,25 +12,34 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 1,
             "id": "c77d35f0-47b5-4f9c-bcb0-002049e5fdfe",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "/home/erik/miniconda3/envs/swe-parl-mot-summarization/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+                        "  from .autonotebook import tqdm as notebook_tqdm\n"
+                    ]
+                }
+            ],
             "source": [
                 "import argparse\n",
                 "import random\n",
                 "import sys\n",
                 "import warnings\n",
+                "\n",
+                "import pandas as pd\n",
                 "import yaml\n",
                 "\n",
                 "from transformers.models.mt5 import MT5Tokenizer\n",
-                "import pandas as pd\n",
                 "\n",
                 "sys.path.append('..')  # Allow import of project packages\n",
-                "from text_summarizer.data.motions_data_module import MotionsDataModule\n",
-                "from text_summarizer.models import t5\n",
-                "from text_summarizer.lit_models import MT5LitModel\n",
-                "from text_summarizer.util import summarize\n",
+                "from motion_title_generator.data.motions_data_module import MotionsDataModule\n",
+                "from motion_title_generator.models import t5\n",
+                "from motion_title_generator.lit_models import MT5LitModel\n",
                 "\n",
                 "warnings.filterwarnings('ignore')\n",
                 "pd.set_option('display.max_colwidth', 500)\n",
