--- a/notebooks/view_sample_predictions.ipynb
+++ b/notebooks/view_sample_predictions.ipynb
@@ -46,13 +46,20 @@
                 "\n",
                 "BASE_PATH = \"../training/logs/lightning_logs/version_1/\"\n",
                 "MODEL_PATH = BASE_PATH + \"checkpoints/epoch=009-val_loss=1.242.ckpt\"\n",
-                "HPARAMS_PATH =  BASE_PATH + \"hparams.yaml\"\n",
-                "RANDOM_STATE = 1"
+                "HPARAMS_PATH =  BASE_PATH + \"hparams.yaml\""
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "d3b188f8",
+            "metadata": {},
+            "source": [
+                "### Load data"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 2,
             "id": "b850804a",
             "metadata": {},
             "outputs": [
@@ -60,12 +67,15 @@
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
+                        "Preprocessing data ...\n",
                         "Filtered 618 rows with missing values.\n",
                         "Filtered 7444 texts shorter than 150 characters.\n",
-                        "Number of rows remaining: 161989\n",
-                        "Using 161989 of 161989 examples.\n",
-                        "Train: 113392, Val: 24298, Test: 24299\n",
-                        "<text_summarizer.data.motions_data_module.MotionsDataModule object at 0x7f76ff150850>\n"
+                        "Filtered 16919 texts with generic title.\n",
+                        "Number of rows remaining: 145070\n",
+                        "Preprocessed data saved to /home/erik/proj/swedish_parliament_motion_summarization/data/downloaded/prepped_training_data.feather\n",
+                        "Using 145070 of 145070 examples.\n",
+                        "Train: 108802, Val: 21760, Test: 14508\n",
+                        "<motion_title_generator.data.motions_data_module.MotionsDataModule object at 0x7efedc76db50>\n"
                     ]
                 }
             ],
@@ -90,10 +100,18 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": 3,
             "id": "c1dfec9b",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "Lightning automatically upgraded your loaded checkpoint from v1.6.4 to v2.0.2. To apply the upgrade to your files permanently, run `python -m pytorch_lightning.utilities.upgrade_checkpoint --file ../training/logs/lightning_logs/version_1/checkpoints/epoch=009-val_loss=1.242.ckpt`\n"
+                    ]
+                }
+            ],
             "source": [
                 "# Instanciate model to pass to lit_model\n",
                 "model = t5.MT5(data_config={}, args=lightning_config)\n",
@@ -108,16 +126,17 @@
             ]
         },
         {
+            "attachments": {},
             "cell_type": "markdown",
-            "id": "06018d06",
+            "id": "f636e6ba",
             "metadata": {},
             "source": [
-                "### Load data"
+                "### Generate title"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 59,
+            "execution_count": 18,
             "id": "8b09fd5e",
             "metadata": {},
             "outputs": [],
@@ -133,6 +152,7 @@
                 "        return_tensors=\"pt\",\n",
                 "    )\n",
                 "\n",
+                "    model.model.to(\"cpu\")\n",
                 "    generated_ids = model.model.generate(\n",
                 "        input_ids=text_encoding[\"input_ids\"],\n",
                 "        attention_mask=text_encoding[\"attention_mask\"],\n",
@@ -155,7 +175,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 60,
+            "execution_count": 19,
             "id": "dc1df9ab",
             "metadata": {},
             "outputs": [
@@ -165,13 +185,13 @@
                     "text": [
                         "Motion text:\n",
                         "--------------------------------------------------\n",
-                        "Vi har i vår motion om den allmänna inriktningen av den ekonomiska politiken m. m. bl. a. föreslagit att-som ett led i ett stöd till de särskilt utsatta grupperna - en temporär höjning skall ske av studiebidraget inom studiehjälpssystemet och det förlängda barnbidraget. Den temporära höjningen bör utgå med nio tolftedelar av det föreslagna beloppet för extra tillägg till barnbidraget (500 kr.), dvs. 375 kr. Utbetalningen bör göras så snart som möjligt efter början av höstterminen 1978 och ha for\n",
+                        "Arbetsmarknaden på både scen och medieområdet har förändrats kraftigt under senare år. På scenkonstområdet (teater, musikteater och dans) är allt färre fast anställda och alltfler frilansare. Medieområdet (film, tv, radio och nya medier) har alltid kännetecknats av frilansare. Men också utvecklingen på medieområdet har gått mot en ytterligare fragmentiserad arbetsmarknad med arbetsgivare eller uppdragsgivare som inte kan eller vill ta ett mer långsiktigt ansvar för sina korttidsanställda. Denna \n",
                         "--------------------------------------------------\n",
                         "Actual title:\n",
-                        "med anledning av propositionen 1977/78:150 med förslag till slutlig reglering av statsbudgeten för budgetåret 1978/79, m. m. (kompletteringsproposition)\n",
+                        "Kompetensutveckling inom scenkonst och film\n",
                         "--------------------------------------------------\n",
                         "Predicted title:\n",
-                        "om vidgad rätt till studiebidrag\n",
+                        "Kompetensutveckling inom scenkonst och film\n",
                         "--------------------------------------------------\n"
                     ]
                 }
@@ -181,6 +201,7 @@
                 "    sample_index = random.randint(0, len(dataset.data_test.data))\n",
                 "    text = dataset.data_test.data[sample_index]\n",
                 "    true_summary = dataset.data_test.targets[sample_index]\n",
+                "    \n",
                 "    model_summary = summarize(\n",
                 "        model=model,\n",
                 "        text=text,\n",
@@ -205,15 +226,7 @@
         {
             "cell_type": "code",
             "execution_count": null,
-            "id": "b551e6ce",
-            "metadata": {},
-            "outputs": [],
-            "source": []
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "id": "93b2e4da",
+            "id": "d2d88f48",
             "metadata": {},
             "outputs": [],
             "source": []
