Update notebook imports.

--- a/notebooks/exploratory-data-analysis.ipynb
+++ b/notebooks/exploratory-data-analysis.ipynb
@@ -725,10 +725,10 @@
    ],
    "source": [
     "# Initial cleaning\n",
-    "df[\"title\"] = _trim_whitespace(df[\"title\"])\n",
-    "df[\"text\"] = _trim_linebreaks(df[\"text\"])\n",
-    "df[\"text\"] = _trim_whitespace(df[\"text\"])\n",
-    "df[\"text\"] = df.apply(_trim_motion_text_by_subtitle, axis=1)\n",
+    "df[\"title\"] = trim_whitespace(df[\"title\"])\n",
+    "df[\"text\"] = trim_linebreaks(df[\"text\"])\n",
+    "df[\"text\"] = trim_whitespace(df[\"text\"])\n",
+    "df[\"text\"] = df.apply(trim_motion_text_by_subtitle, axis=1)\n",
     "\n",
     "first_motion = df['text'][0][:500]\n",
     "print(first_motion)"
@@ -749,7 +749,7 @@
     }
    ],
    "source": [
-    "df[\"text\"] = df.apply(_trim_motion_text_by_leading_title, axis=1)\n",
+    "df[\"text\"] = df.apply(trim_motion_text_by_leading_title, axis=1)\n",
     "\n",
     "first_motion = df['text'][0][:500]\n",
     "print(first_motion)"
@@ -770,7 +770,7 @@
     }
    ],
    "source": [
-    "df[\"text\"] = df.apply(_trim_motion_text_by_proposed_decision, axis=1)\n",
+    "df[\"text\"] = df.apply(trim_motion_text_by_proposed_decision, axis=1)\n",
     "\n",
     "first_motion = df['text'][0][:500]\n",
     "print(first_motion)"
@@ -791,9 +791,9 @@
     }
    ],
    "source": [
-    "df[\"text\"] = df.apply(_trim_leadning_motivation, axis=1)\n",
-    "df[\"text\"] = df.apply(_set_empty_when_leadning_date, axis=1)\n",
-    "df[\"text\"] = df.apply(_delete_footer, axis=1)\n",
+    "df[\"text\"] = df.apply(trim_leadning_motivation, axis=1)\n",
+    "df[\"text\"] = df.apply(set_empty_when_leading_date, axis=1)\n",
+    "df[\"text\"] = df.apply(delete_footer, axis=1)\n",
     "\n",
     "first_motion = df['text'][0][:500]\n",
     "print(first_motion)"
@@ -1157,7 +1157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Oct 13 2022, 21:15:33) \n[GCC 11.2.0]"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
