Update title generation notebook.

--- a/notebooks/view_sample_predictions.ipynb
+++ b/notebooks/view_sample_predictions.ipynb
@@ -12,34 +12,24 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": 7,
             "id": "c77d35f0-47b5-4f9c-bcb0-002049e5fdfe",
             "metadata": {},
-            "outputs": [
-                {
-                    "name": "stderr",
-                    "output_type": "stream",
-                    "text": [
-                        "/home/erik/miniconda3/envs/swe-parl-mot-summarization/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-                        "  from .autonotebook import tqdm as notebook_tqdm\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "source": [
-                "import argparse\n",
                 "import random\n",
                 "import sys\n",
                 "import warnings\n",
                 "\n",
                 "import pandas as pd\n",
                 "import yaml\n",
-                "\n",
                 "from transformers.models.mt5 import MT5Tokenizer\n",
                 "\n",
                 "sys.path.append('..')  # Allow import of project packages\n",
                 "from motion_title_generator.data.motions_data_module import MotionsDataModule\n",
                 "from motion_title_generator.models import t5\n",
                 "from motion_title_generator.lit_models import MT5LitModel\n",
+                "from utils.encode_decode import encode, generate\n",
                 "\n",
                 "warnings.filterwarnings('ignore')\n",
                 "pd.set_option('display.max_colwidth', 500)\n",
@@ -64,25 +54,34 @@
             "metadata": {},
             "outputs": [
                 {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "INFO:Dowloading files from https://data.riksdagen.se.\n",
+                        "100%|██████████| 1231/1231 [00:00<00:00, 41050.66it/s]\n",
+                        "INFO:Loading data from /home/erik/proj/swedish_parliament_motion_summarization/data/downloaded/raw_swe_parl_mot.pkl into pandas dataframe.\n",
+                        "INFO:Preprocessing data ...\n",
+                        "INFO:Filtered 521 rows with missing values.\n",
+                        "INFO:Filtered 7445 texts shorter than 150 characters.\n",
+                        "INFO:Filtered 17004 texts based on their title.\n",
+                        "INFO:Number of rows remaining: 145100\n",
+                        "INFO:Preprocessed data saved to /home/erik/proj/swedish_parliament_motion_summarization/data/downloaded/prepped_training_data.feather\n",
+                        "INFO:Using 145100 of 145100 examples.\n",
+                        "INFO:Data split sizes -- train: 108825, val: 21765, test: 14510\n"
+                    ]
+                },
+                {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "Preprocessing data ...\n",
-                        "Filtered 618 rows with missing values.\n",
-                        "Filtered 7444 texts shorter than 150 characters.\n",
-                        "Filtered 16919 texts with generic title.\n",
-                        "Number of rows remaining: 145070\n",
-                        "Preprocessed data saved to /home/erik/proj/swedish_parliament_motion_summarization/data/downloaded/prepped_training_data.feather\n",
-                        "Using 145070 of 145070 examples.\n",
-                        "Train: 108802, Val: 21760, Test: 14508\n",
-                        "<motion_title_generator.data.motions_data_module.MotionsDataModule object at 0x7efedc76db50>\n"
+                        "<motion_title_generator.data.motions_data_module.MotionsDataModule object at 0x7f37997e8a60>\n"
                     ]
                 }
             ],
             "source": [
                 "# Load pytorch-lightning experiment args\n",
                 "with open(HPARAMS_PATH, \"r\") as hparams_file:\n",
-                "   lightning_config = argparse.Namespace(**yaml.load(hparams_file, Loader=yaml.Loader))\n",
+                "   lightning_config = yaml.load(hparams_file, Loader=yaml.Loader)\n",
                 "\n",
                 "dataset = MotionsDataModule(lightning_config)\n",
                 "dataset.prepare_data()\n",
@@ -108,7 +107,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "Lightning automatically upgraded your loaded checkpoint from v1.6.4 to v2.0.2. To apply the upgrade to your files permanently, run `python -m pytorch_lightning.utilities.upgrade_checkpoint --file ../training/logs/lightning_logs/version_1/checkpoints/epoch=009-val_loss=1.242.ckpt`\n"
+                        "Lightning automatically upgraded your loaded checkpoint from v1.6.4 to v2.0.4. To apply the upgrade to your files permanently, run `python -m lightning.pytorch.utilities.upgrade_checkpoint --file ../training/logs/lightning_logs/version_1/checkpoints/epoch=009-val_loss=1.242.ckpt`\n"
                     ]
                 }
             ],
@@ -136,46 +135,20 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 18,
+            "execution_count": 4,
             "id": "8b09fd5e",
             "metadata": {},
             "outputs": [],
             "source": [
-                "def summarize(model, text, tokenizer, text_max_num_tokens, summary_max_num_tokens):\n",
-                "    text_encoding = tokenizer(\n",
-                "        text,\n",
-                "        max_length=text_max_num_tokens,\n",
-                "        padding=\"max_length\",\n",
-                "        truncation=True,\n",
-                "        return_attention_mask=True,\n",
-                "        add_special_tokens=True,\n",
-                "        return_tensors=\"pt\",\n",
-                "    )\n",
-                "\n",
+                "def summarize(model, text, tokenizer, text_max_num_tokens, title_max_num_tokens):\n",
                 "    model.model.to(\"cpu\")\n",
-                "    generated_ids = model.model.generate(\n",
-                "        input_ids=text_encoding[\"input_ids\"],\n",
-                "        attention_mask=text_encoding[\"attention_mask\"],\n",
-                "        max_length=summary_max_num_tokens,\n",
-                "        num_beams=2,\n",
-                "        repetition_penalty=5.0,\n",
-                "        length_penalty=2.0,\n",
-                "        early_stopping=True,\n",
-                "    )\n",
-                "\n",
-                "    preds = [\n",
-                "        tokenizer.decode(\n",
-                "            gen_id, skip_special_tokens=True, clean_up_tokenization_spaces=True\n",
-                "        )\n",
-                "        for gen_id in generated_ids\n",
-                "    ]\n",
-                "\n",
-                "    return \"\".join(preds)"
+                "    text_encoding = encode(text, tokenizer, text_max_num_tokens)\n",
+                "    return generate(model.model, tokenizer, text_encoding, title_max_num_tokens)"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 19,
+            "execution_count": 8,
             "id": "dc1df9ab",
             "metadata": {},
             "outputs": [
@@ -185,13 +158,13 @@
                     "text": [
                         "Motion text:\n",
                         "--------------------------------------------------\n",
-                        "Arbetsmarknaden på både scen och medieområdet har förändrats kraftigt under senare år. På scenkonstområdet (teater, musikteater och dans) är allt färre fast anställda och alltfler frilansare. Medieområdet (film, tv, radio och nya medier) har alltid kännetecknats av frilansare. Men också utvecklingen på medieområdet har gått mot en ytterligare fragmentiserad arbetsmarknad med arbetsgivare eller uppdragsgivare som inte kan eller vill ta ett mer långsiktigt ansvar för sina korttidsanställda. Denna \n",
+                        "I delgivningskungörelsen den 29 juni 1970 anges i 4 § att de myndigheter som finns upptagna i bilaga 2 till kungörelsen får anlita postverket för särskild postdelgivning. I förteckningen finns övervakningsnämnd icke angiven, och nämnden saknar således möjlighet att använda särskild postdelgivning. Övervakningsnämnds arbete skulle underlättas och effektiviteten avsevärt öka, om nämnden ägde rätt att i ärende som den handlägger delge den dömde medelst särskild postdelgivning. Med hänvisning till d\n",
                         "--------------------------------------------------\n",
                         "Actual title:\n",
-                        "Kompetensutveckling inom scenkonst och film\n",
+                        "om rätt för övervakningsnämnd att anlita postverket för särskild postdelgivning.\n",
                         "--------------------------------------------------\n",
                         "Predicted title:\n",
-                        "Kompetensutveckling inom scenkonst och film\n",
+                        "angående postverket för särskild postdelgivning.\n",
                         "--------------------------------------------------\n"
                     ]
                 }
@@ -207,7 +180,7 @@
                 "        text=text,\n",
                 "        tokenizer=tokenizer,\n",
                 "        text_max_num_tokens=512,\n",
-                "        summary_max_num_tokens=64\n",
+                "        title_max_num_tokens=64\n",
                 "    )\n",
                 "    print(\"Motion text:\")\n",
                 "    print(50*\"-\")\n",
@@ -222,14 +195,6 @@
                 "\n",
                 "show_sample_pred(lit_model.tokenizer)"
             ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "id": "d2d88f48",
-            "metadata": {},
-            "outputs": [],
-            "source": []
         }
     ],
     "metadata": {
